# squish

./: .gitignore  Cargo.toml  README.md  cassette.tape  deny.toml
.github/: dependabot.yml
.github/workflows/: lint.yml  main.yml  pr.yml  test.yml
src/: common.rs  main.rs  types.rs
tests/: cli.rs  test.sh
tests/common/: mod.rs
