[package]
name = "squish"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
anyhow = "1.0.99"
arboard = "3.6.1"
bytes = "1.10.1"
clap = { version = "4.5.48", features = ["derive"] }
colored = "3.0.0"
image = "0.25.8"
infer = "0.19.0"
tempfile = "3.21.0"

[dev-dependencies]
insta-cmd = "0.6.0"

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3

[profile.release]
codegen-units = 1
lto = "fat"
strip = "symbols"
