[package]
name = "squish"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
anyhow = "1.0.102"
arboard = "3.6.1"
bytes = "1.11.1"
clap = { version = "4.6.0", features = ["derive"] }
colored = "3.1.1"
image = "0.25.9"
infer = "0.19.0"
tempfile = "3.27.0"

[dev-dependencies]
insta-cmd = "0.6.0"

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3

[profile.release]
codegen-units = 1
lto = "fat"
strip = "symbols"
